force-app/main/default/objects/Rollup__mdt/Rollup__mdt.object-meta.xml
<CustomObject>
    <description>Used to store rollup configuration in the org, instead of in apex code.
Each record represents a single Rollup.Request object, that is a configuration to update a single field on the parent object.</description>
    <label>Rollup</label>
    <pluralLabel>Rollups</pluralLabel>
</CustomObject>