force-app/main/default/objects/Rollup__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, the Rollup will not be run</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>