force-app/main/default/objects/Rollup__mdt/fields/Calculation_Field__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Field__c</fullName>
    <inlineHelpText>The field on the Child SObject used to perform rollup calculations.
ex., SUM Opportunity.Amount
Not needed for COUNT-type rollups.</inlineHelpText>
    <label>Calculation Field</label>
    <metadataRelationshipControllingField>Rollup__mdt.Child_SObjectType__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Calculation Fields</relationshipLabel>
    <relationshipName>Calculation_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>