force-app/main/default/objects/Rollup__mdt/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <defaultValue>&quot;AVG&quot;</defaultValue>
    <inlineHelpText>The type of calculation that will be applied during the rollup.
Either this field, or a Calculator Class Name must be provided.</inlineHelpText>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVG</fullName>
                <default>true</default>
                <label>AVG</label>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>