force-app/main/default/objects/Rollup__mdt/fields/Calculator_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Calculator_Class_Name__c</fullName>
    <inlineHelpText>The name of an apex class which will handle the rollup calculation
This class must have a default constructor, and implement the Rollup.Calculator interface.
Either a Calculation Type, or this field must be provided.</inlineHelpText>
    <label>Calculator Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>