force-app/main/default/objects/Rollup__mdt/fields/Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Name__c</fullName>
    <inlineHelpText>The name of the Schema.ChildRelationship that connects the Parent SObjectType to the Child SObjectType
https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_class_Schema_ChildRelationship.htm</inlineHelpText>
    <label>Child Relationship Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>