force-app/main/default/objects/Rollup__mdt/fields/Child_SObjectType__c.field-meta.xml
<CustomField>
    <fullName>Child_SObjectType__c</fullName>
    <inlineHelpText>The source SObject used in calculations</inlineHelpText>
    <label>Child SObjectType</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>