force-app/main/default/objects/Rollup__mdt/fields/Parent_SObjectType__c.field-meta.xml
<CustomField>
    <fullName>Parent_SObjectType__c</fullName>
    <inlineHelpText>The target SObjectType, where rollup results will be posted.</inlineHelpText>
    <label>Parent SObjectType</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Parent Rollups</relationshipLabel>
    <relationshipName>Parent_Rollups</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>