force-app/main/default/objects/Rollup__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <inlineHelpText>The API Name of the lookup field which points to the Parent SObjectType. 
This field&apos;s &quot;Child Relationship Name&quot; should match the Rollup&apos;s &quot;Child Relationship Name&quot;</inlineHelpText>
    <label>Relationship Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>