force-app/main/default/objects/Rollup__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <inlineHelpText>The field on the Parent SObject where rollup results will be posted</inlineHelpText>
    <label>Target Field</label>
    <metadataRelationshipControllingField>Rollup__mdt.Parent_SObjectType__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Target Fields</relationshipLabel>
    <relationshipName>Target Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>