force-app/main/default/objects/Rollup__mdt/validationRules/CalculationFieldRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CalculationFieldRequired</fullName>
    <active>true</active>
    <description>Aside from COUNT, a Calculation Field is always required for the standard Calculation Methods</description>
    <errorConditionFormula>AND(
    ISBLANK(Calculation_Field__c),
    NOT(ISBLANK(TEXT(Calculation_Type__c))),
    NOT(ISPICKVAL(Calculation_Type__c, &quot;COUNT&quot;))
)</errorConditionFormula>
    <errorDisplayField>Calculation_Field__c</errorDisplayField>
    <errorMessage>A Calculation Field is required for AVG, MAX, MIN, and SUM rollups.</errorMessage>
</ValidationRule>