force-app/main/default/objects/Rollup__mdt/validationRules/ValidateCalculationMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateCalculationMethod</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        NOT(ISBLANK(TEXT(Calculation_Type__c))),
        NOT(ISBLANK(Calculator_Class_Name__c))
    ),
    AND(
        ISBLANK(TEXT(Calculation_Type__c)),
        ISBLANK(Calculator_Class_Name__c)
    )
)</errorConditionFormula>
    <errorMessage>A Rollup must have only one of the following:
- Calculation Type
- Calculator Class Name</errorMessage>
</ValidationRule>